fixed spacing

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -97,23 +97,19 @@ h5 {
 
 .steps-container {
   margin: auto;
-
-  @media (max-width: 575px){
-    max-width: 220px;
-  }
 }
 
 .main-content {
   width: 90vw;
   max-width: 800px;
-  height: calc(100vh - 290px);
+  height: calc(100dvh - 340px);
   padding: 0;
   margin: 0.5rem;
   overflow-y: auto;
 
-  @media (max-width: 575px){
+  @media (max-width: 757px){
     width: 85vw;
-    height: calc(100vh - 240px);
+    height: calc(100dvh - 270px);
     margin: auto;
   }
 }
